--- a/src/main/webapp/css/doedat-cas.css
+++ b/src/main/webapp/css/doedat-cas.css
@@ -14,14 +14,14 @@ form.banner,
 
 
 .logo-navbar-brand {
-    background-image: url(../img/plantentuin-meise.gif);
+    background-image: url(../img/doedat/logoDoeDat.png);
     width: 280px;
     height: 40px;
     background-repeat: no-repeat;
     background-size: contain;
 }
 .brand-layout-logo {
-    background-image: url(../img/plantentuin-meise.gif);
+    background-image: url(../img/doedat/logoDoeDat.png);
     width: 120px;
     height: 70px;
     background-repeat: no-repeat;
