--- a/src/main/webapp/css/doedat-cas.css
+++ b/src/main/webapp/css/doedat-cas.css
@@ -15,15 +15,17 @@ form.banner,
 
 .logo-navbar-brand {
     background-image: url(../img/doedat/logoDoeDat.png);
-    width: 280px;
-    height: 40px;
+    width: 180px;
+    /* height: 40px; */
+    margin-top: 8px;
     background-repeat: no-repeat;
     background-size: contain;
 }
 .brand-layout-logo {
     background-image: url(../img/doedat/logoDoeDat.png);
-    width: 120px;
-    height: 70px;
+    width: 200px;
+    height: 50px;
     background-repeat: no-repeat;
     background-size: contain;
+    margin: 15px;
 }
