--- a/src/main/webapp/css/doedat-cas.css
+++ b/src/main/webapp/css/doedat-cas.css
@@ -29,3 +29,9 @@ form.banner,
     background-size: contain;
     margin: 15px;
 }
+
+.forgot {
+    position: absolute;
+    top: 63px;
+    right: 2px;
+}
